[gd_scene load_steps=9 format=2]

[ext_resource path="res://Materials/3d_prints.tres" type="Material" id=1]
[ext_resource path="res://Materials/wireframe_material.tres" type="Material" id=2]
[ext_resource path="res://Scripts/MoonShop.gd" type="Script" id=3]
[ext_resource path="res://Materials/moon_gate_mat.tres" type="Material" id=4]
[ext_resource path="res://Meshes/moon.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Animations/moon_scale.tres" type="Animation" id=6]

[sub_resource type="SphereShape" id=1]
radius = 0.66

[sub_resource type="CylinderMesh" id=2]

[node name="MoonShop" type="Area"]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56, 0 )
shape = SubResource( 1 )

[node name="SpinPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56, 0 )

[node name="SpinningMesh" type="MeshInstance" parent="SpinPivot"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 4 )
material/1 = ExtResource( 2 )

[node name="ScaleAnimPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/moon_scale = ExtResource( 6 )

[node name="StaticMesh" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.56, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 2 )

[node name="Stick" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-08, -0.25, 0, 0.1, -4.07302e-08, 0, 0, 0, 0.1, 0.5, 0.56, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )
